var/benchmark/es_time.txt
file:///Users/0x1/Documents/htdocs/altbak.pub/output-es/Data.Show/foreign.js:1
export .spago/p/prelude-6.0.2/src/Data/Show.js
^^^^^^

SyntaxError: Unexpected token 'export'
    at compileSourceTextModule (node:internal/modules/esm/utils:357:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:109:18)
    at #translate (node:internal/modules/esm/loader:575:20)
    at afterLoad (node:internal/modules/esm/loader:625:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:630:12)
    at #createModuleJob (node:internal/modules/esm/loader:654:36)
    at #getJobFromResolveResult (node:internal/modules/esm/loader:354:34)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:319:41)

Node.js v24.8.0
node -e "import('./output-es/App/index.js').then(m => m.main())"  0.02s user 0.01s system 98% cpu 0.023 total
